style.css
:root {
    --bg-user: #000;
    --text-user: #fff;
    --accent-user: #f70;
    --bg: rgb(from var(--bg-user) r g b / alpha);
    --bg-alt: rgb(from var(--bg) calc((r + 63)*0.5) calc((g + 63)*0.5) calc((b + 63)*0.5) / alpha);
    --text: rgb(from var(--text-user) r g b / alpha);
    --text-alt: oklch(from var(--text) l calc(c*0.5) calc(h + 160) / alpha);
    --accent: rgb(from var(--accent-user) r g b / alpha);
    --accent-alt: oklch(from var(--accent) calc(1 - l) calc((1 - c)*0.5) calc(h + 160) / alpha); /* It's specifically 160 and not 180 */

    --size: 16px;
    --size-075: calc(var(--size) * 0.75);
    --size-05: calc(var(--size) * 0.5);
    --size-025: calc(var(--size) * 0.25);
    --size-2px: calc(var(--size) * 0.125);
    --size-1px: calc(var(--size) * 0.0625);
    --size-0-5px: calc(var(--size) * 0.03125);
    --size-2: calc(var(--size) * 2);

    --fill-available: 100%;
    --fsb-display: inline-block;
    --viewer-footer-not-on-hover-opacity: 0;
    --viewer-footer-transition: opacity 0.3s ease-in-out;
    --viewer-footer-translation-of-backdrop: 0 100%;
    --mediaMargin: 2.5px; /* Because they don't overlap it's halved... :/ */

    --minWidthAfterGallery-user: 33%;
    --minWidthAfterGallery: min(100vw, var(--minWidthAfterGallery-user));
}
@supports (width: -moz-available) {
    :root {
        --fill-available: -moz-available;
    }
}
@supports (width: -webkit-fill-available) {
    :root {
        --fill-available: -webkit-fill-available;
    }
}
/* ------- */
/* General */
/* ------- */
body.idle :is(#gallery, .viewer-container) {
    &, * {
        --idle-cursor: none;
        cursor: var(--idle-cursor, auto);
        nav, nav * {
            --idle-cursor: revert;
        }
    }
}
html {
    scrollbar-width: thin;
    scrollbar-color: var(--accent) transparent;
}
body {
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
    font-size: var(--size);
    background: var(--bg);
    color: var(--text);
    overflow-y: scroll !important;
    min-height: 100vh;
    /* min-width: 400px; */
    padding-right: 0 !important; /* ViewerJS, what is wrong with you */
    touch-action: pan-x pan-y;
}
html:has(body.viewer-open) {
    scrollbar-color: transparent transparent;
}
@media screen and (max-width: 500px) {
    body {
        /* zoom: 0.75; */
        --size: 12px;
    }
}
@media screen and (max-width: 350px) {
    body {
        /* zoom: 0.5; */
        --size: 8px;
    }
}
@media screen and (max-width: 225px) {
    body {
        /* zoom: 0.33; */
        --size: 6px;
    }
}
@media screen and (max-width: 150px) {
    body {
        /* zoom: 0.25; */
        --size: 4px;
    }
}
@media screen and (max-width: 100px) {
    body {
        /* zoom: 0.25; */
        --size: 3px;
    }
}
::selection {
    color: var(--accent-alt);
    background-color: var(--accent);
}
section {
    padding: var(--size);
}
nav {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    position: sticky;
    top: 0;
    --blurry-bg: rgba(from var(--bg) r g b / 0.8);
    --droppy: blur(var(--size));
    background-color: var(--blurry-bg);
    backdrop-filter: var(--droppy);
    > * {
        margin: 0.5em;
    }
}
nav > :first-child {
    display: flex;
    flex-direction: row;
    gap: 0.5em;
    flex-wrap: wrap;
    > div {
        position: relative;
        > p {
            padding: 1em 0.5em;
            margin: 0;
            background-color: var(--bg-alt);
            pointer-events: none;
            border-radius: 0.5em;
        }
        > div {
            position: absolute;
            top: 100%;
            left: 0;
            display: none;
            gap: var(--size);
            border-radius: 0.5em;
            background-color: var(--blurry-bg);
            backdrop-filter: var(--droppy);
            padding: var(--size);
            z-index: 3;
            > div {
                display: flex;
                align-items: center;
            }
            label {
                min-width: 7em;
                text-wrap: balance;
            }
        }
    }
    > div:is(:hover), > div:has(*:is(:hover, :active, :focus-within)) {
        > div {
            display: flex;
            flex-direction: column;
        }
    }
}
nav > :last-child {
    margin: auto 0;
    > * {
        display: flex;
        flex-direction: row;
        align-items: center;
        label {
            min-width: 7em;
        }
    }
}
@media screen and (max-width: 600px) {
    nav > :last-child > * {
        flex-direction: column;
    }
}
label, input, .input-value, button, select {
    vertical-align: middle;
    &[type="text"] {
        cursor: text;
    }
    &:not(label) {
        cursor: pointer;
    }
}
a, a:active {
    color: var(--text);
}
a:not(:has(video)):focus-within {
    opacity: 0.5;
}
label {
    text-wrap: nowrap;
}
@media screen and (max-width: 1400px) {
    label {
        text-wrap: balance;
    }
}
input, button, select {
    margin: 0 0.5em;
    font-size: var(--size);
    color: var(--text);
    background-color: var(--bg);
    &:disabled {
        opacity: 0.5;
    }
}
select {
    max-width: var(--fill-available);
}
nav :is(input, button) {
    width: var(--fill-available);
    height: 100%;
}
#misc input[type="checkbox"] {
    width: calc(var(--size) * 1.5);
    height: calc(var(--size) * 1.5);
}
input:not([type="range"]), button, select {
    &:not([type="file"]) {
        border: 0.2em solid var(--text);
    }
    border-radius: 0.5em;
}
input:focus:is(:not([type="range"])) {
    outline: 0.2em solid var(--accent);
}
input[type='range'] {
    appearance: none !important;
    background:var(--text);
    height: calc(var(--size) * 0.45);
    border-radius: 100vh;
}
input[type='range']::-moz-range-progress, input[type='range']::-webkit-slider-runnable-track {
    appearance: none !important;
    background: var(--accent);
    height: calc(var(--size) * 0.45);
    width: calc(var(--size) * 0.45);
    border-radius: 100vh;
}
/* ... */

